--- a/index.css
+++ b/index.css
@@ -1,14 +1,10 @@
-header
-{
 
-    background-color: pink;
-}
 
 footer{
 
-    align-content: center
+    align-content: center;
 }
 body{
     
- background-color: #DE1B1B  
+ background-color: #DE1B1B  ;
 }
