--- a/main.css
+++ b/main.css
@@ -47,8 +47,10 @@ footer{
 @media only screen and (max-width: 400px) and (min-width:200px){
     
     .icons{
-visibility: hidden;
+display:block;
     }
+    .classy{
+visibility:hidden;
 }
 
 .classy{
