--- a/main.css
+++ b/main.css
@@ -44,12 +44,7 @@ footer{
     position: absolute;
     left: 38%;
 }
-@media only screen and (max-width: 400px) and (min-width:200px){
-    
-    .icons{
-visibility:hidden;
-    }
-}
+
 
 
 .classy{
@@ -79,8 +74,14 @@ p{
     
 }
 
-@media only screen and (max-width: 400px) and (min-width:200px){
+@media only screen and (max-width:499px){
+    
+    .icons{
+display: none;
+position: absolute;
+    }
     .classy{
-visibility:hidden;
-}
+        
+        visibility: hidden;
+    }
 }
